--- a/noframework/bulmatodo.html
+++ b/noframework/bulmatodo.html
@@ -16,6 +16,9 @@
         .label{
             color:black;
         }
+        .title{
+          font-weight:500;
+        }
     </style>
   </head>
   <body data-theme="light">
@@ -267,6 +270,37 @@
             </div>
           </div>
         </form>
+      </div>
+      <div class="column is-one-quarter">
+        <h1 class="title">Table of contents</h1>
+        <h2 class="subtitle">Intra-page navigation</h2>
+        <aside class="menu">
+          <p class="menu-label">General</p>
+            <ul class="menu-list">
+              <li><a>Dashboard</a></li>
+              <li><a>Customers</a></li>
+            </ul>
+            <p class="menu-label">Administration</p>
+            <ul class="menu-list">
+              <li><a>Team Settings</a></li>
+              <li><a class="is-active">Manage Your Team</a>
+                <ul>
+                  <li><a>Members</a></li>
+                  <li><a>Plugins</a></li>
+                  <li><a>Add a member</a></li>
+                </ul>
+              </li>
+              <li><a>Invitations</a></li>
+              <li><a>Cloud Storage Environment Settings</a></li>
+              <li><a>Authentication</a></li>
+            </ul>
+            <p class="menu-label">Transactions</p>
+            <ul class="menu-list">
+              <li><a>Payments</a></li>
+              <li><a>Transfers</a></li>
+              <li><a>Balance</a></li>
+            </ul>
+        </aside>
       </div>
     </div>
   </body>
